made is Java 8 compatible ... fucking inf man I swear
Took 9 minutes